--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <nav>
       <ul>
-        <li><a href="./public/food.html">Favorite foods</a></li>
-        <li><a href="./public/movie.html">Favorite movies</a></li>
-        <li><a href="./public/movie.html">Favorite activites</a></li>
+        <li><a href="food.html">Favorite foods</a></li>
+        <li><a href="movie.html">Favorite movies</a></li>
+        <li><a href="movie.html">Favorite activites</a></li>
       </ul>
     </nav>
     <main>
